// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hyperlink /> should render external link when href is for a different host 1`] = `
<a
  href="https://www.google.com"
  target="_blank"
>
  <img
    alt="external-icon"
    className="dte-wismo-hyperlink-icon"
    src="IMAGE_MOCK"
  />
  External Link Text
</a>
`;

exports[`<Hyperlink /> should render internal link when href is for the current host 1`] = `
<a
  href="localhost"
  target="_self"
>
  Internal Link Text
</a>
`;

exports[`<Hyperlink /> target should be set to _blank when a target is not provided and href is for a different host 1`] = `
<a
  href="https://www.google.com"
  target="_blank"
>
  <img
    alt="external-link"
    className="dte-wismo-hyperlink-icon"
    src="IMAGE_MOCK"
  />
  External Link Text
</a>
`;

exports[`<Hyperlink /> target should be set to _self when a target is not provided and href is for the current host 1`] = `
<a
  href="localhost"
  target="_self"
>
  Internal Link Text
</a>
`;

exports[`<Hyperlink /> target should be set to the given target when a target is provided and href is for a different host 1`] = `
<a
  href="https://www.google.com"
  target="_top"
>
  <img
    alt="external-link"
    className="dte-wismo-hyperlink-icon"
    src="IMAGE_MOCK"
  />
  External Link Text
</a>
`;

exports[`<Hyperlink /> target should be set to the given target when a target is provided and href is for the current host 1`] = `
<a
  href="localhost"
  target="_top"
>
  Internal Link Text
</a>
`;
